Comienzo de ejercicio de identificación de QRs

--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>dropwizard-core</artifactId>
             <version>2.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.2</version>
+        </dependency>
     </dependencies>
 </project>
